--- a/index.html
+++ b/index.html
@@ -2,29 +2,69 @@
 <html>
 <head>
 <title>Afa Cinwo</title>
+
 <style>
 body {
+    margin:0;
     font-family: Arial, sans-serif;
-    background: #111;
-    color: white;
-    text-align: center;
-    padding: 50px;
+    background: linear-gradient(135deg,#000,#222);
+    color:white;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
 }
-button {
-    padding: 10px 20px;
-    background: lime;
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
+
+.card{
+    background:#111;
+    padding:30px;
+    border-radius:15px;
+    text-align:center;
+    box-shadow:0 0 20px lime;
+    max-width:300px;
+}
+
+img{
+    width:120px;
+    border-radius:50%;
+    border:3px solid lime;
+}
+
+h1{
+    margin:15px 0 5px;
+}
+
+p{
+    color:#aaa;
+}
+
+button{
+    margin-top:15px;
+    padding:12px 25px;
+    background:lime;
+    border:none;
+    border-radius:25px;
+    font-weight:bold;
+    cursor:pointer;
 }
 </style>
+
 </head>
+
 <body>
+
+<div class="card">
+
+<img src="https://i.imgur.com/7QZ4F6N.png">
 
 <h1>Afa Cinwo 😎</h1>
 <p>Web pertamaku dibuat pakai HP</p>
 
+<a href="https://wa.me/6285891786542" target="_blank">
 <button>Chat WhatsApp</button>
+</a>
+
+</div>
 
 </body>
 </html>
