--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ button{
 <body>
 
 <div class="card">
+<img src="foto.png" width="140" style="border-radius:50%;box-shadow:0 0 15px lime;">
 
-<img src="https://i.imgur.com/7QZ4F6N.png">
 
 <h1>Afa Cinwo 😎</h1>
 <p>Web pertamaku dibuat pakai HP</p>
