--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ button{
 <body>
 
 <div class="card">
-<img src="Foto.png" width="140" style="border-radius:50%;box-shadow:0 0 15px lime;">
+<img src="Foto.png" width="200" style="display:block;margin:auto;">
 
 
 <h1>Afa Cinwo 😎</h1>
