--- a/index.html
+++ b/index.html
@@ -47,7 +47,47 @@ button{
     font-weight:bold;
     cursor:pointer;
 }
+<style>
+body{
+background:#111;
+color:white;
+text-align:center;
+padding:50px;
+font-family:Arial;
+}
+
+p{
+color:#aaa;
+}
+
+button{
+margin-top:15px;
+padding:12px 25px;
+background:lime;
+border:none;
+border-radius:25px;
+font-weight:bold;
+cursor:pointer;
+}
+
+/* TOMBOL WA */
+.wa{
+padding:15px 30px;
+background:#00ff66;
+border:none;
+border-radius:25px;
+font-size:18px;
+font-weight:bold;
+box-shadow:0 0 15px #00ff66;
+transition:0.3s;
+}
+
+.wa:hover{
+box-shadow:0 0 30px #00ff66;
+transform:scale(1.1);
+}
 </style>
+}
 
 </head>
 
@@ -59,9 +99,8 @@ button{
 
 <h1>Afa Cinwo 😎</h1>
 <p>Web pertamaku dibuat pakai HP</p>
-
 <a href="https://wa.me/6285891786542" target="_blank">
-<button>Chat WhatsApp</button>
+<button class="wa">Chat WhatsApp</button>
 </a>
 
 </div>
