--- a/index.html
+++ b/index.html
@@ -4,106 +4,116 @@
 <title>Afa Cinwo</title>
 
 <style>
-body {
-    margin:0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg,#000,#222);
-    color:white;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-}
-
-.card{
-    background:#111;
-    padding:30px;
-    border-radius:15px;
-    text-align:center;
-    box-shadow:0 0 20px lime;
-    max-width:300px;
-}
-
-img{
-    width:120px;
-    border-radius:50%;
-    border:3px solid lime;
-}
-
-h1{
-    margin:15px 0 5px;
-}
-
-p{
-    color:#aaa;
-}
-
-button{
-    margin-top:15px;
-    padding:12px 25px;
-    background:lime;
-    border:none;
-    border-radius:25px;
-    font-weight:bold;
-    cursor:pointer;
-}
-<style>
 body{
-background:#111;
-color:white;
-text-align:center;
-padding:50px;
+margin:0;
+height:100vh;
+display:flex;
+justify-content:center;
+align-items:center;
+background:black;
+overflow:hidden;
 font-family:Arial;
+color:white;
 }
 
-p{
-color:#aaa;
+/* BACKGROUND */
+.bg{
+position:fixed;
+width:100%;
+height:100%;
+background:radial-gradient(circle,#00ff6633,transparent);
+animation:pulse 4s infinite;
 }
 
-button{
-margin-top:15px;
-padding:12px 25px;
-background:lime;
-border:none;
-border-radius:25px;
-font-weight:bold;
-cursor:pointer;
+@keyframes pulse{
+0%{opacity:.3}
+50%{opacity:.8}
+100%{opacity:.3}
 }
 
-/* TOMBOL WA */
+/* CARD */
+.card{
+z-index:1;
+background:rgba(255,255,255,.05);
+padding:40px;
+border-radius:20px;
+box-shadow:0 0 30px #00ff66;
+text-align:center;
+backdrop-filter:blur(8px);
+}
+
+/* FOTO */
+img{
+width:150px;
+border-radius:50%;
+box-shadow:0 0 20px #00ff66;
+}
+
+/* TYPING */
+.typing{
+border-right:2px solid #00ff66;
+display:inline-block;
+padding-right:5px;
+animation:blink 1s infinite;
+}
+
+@keyframes blink{
+50%{border-color:transparent}
+}
+
+/* WA BUTTON */
 .wa{
-padding:15px 30px;
+margin-top:20px;
+padding:15px 35px;
 background:#00ff66;
 border:none;
-border-radius:25px;
+border-radius:30px;
 font-size:18px;
 font-weight:bold;
+cursor:pointer;
 box-shadow:0 0 15px #00ff66;
-transition:0.3s;
+transition:.3s;
 }
 
 .wa:hover{
-box-shadow:0 0 30px #00ff66;
-transform:scale(1.1);
+transform:scale(1.15);
+box-shadow:0 0 40px #00ff66;
 }
 </style>
-}
-
 </head>
 
 <body>
 
+<div class="bg"></div>
+
 <div class="card">
-<img src="Foto.png" width="200" style="display:block;margin:auto;">
 
+<img src="Foto.png">
 
-<h1>Afa Cinwo 😎</h1>
-<p>Web pertamaku dibuat pakai HP</p>
+<h1><span class="typing" id="text"></span></h1>
+
+<p>Web pertamaku dibuat pakai HP 📱</p>
+
 <a href="https://wa.me/6285891786542" target="_blank">
 <button class="wa">Chat WhatsApp</button>
 </a>
 
 </div>
+
+<script>
+const text="Afa Cinwo 😎";
+let i=0;
+
+function ketik(){
+if(i<text.length){
+document.getElementById("text").innerHTML+=text.charAt(i);
+i++;
+setTimeout(ketik,120);
+}
+}
+
+ketik();
+</script>
 
 </body>
 </html>
