--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ box-shadow:0 0 40px #00ff66;
 
 <h1><span class="typing" id="text"></span></h1>
 
-<p>Web pertamaku dibuat pakai HP 📱</p>
+<p>Terminal aktif • Mode hacker ON</p>
 
 <a href="https://wa.me/6285891786542" target="_blank">
 <button class="wa">Chat WhatsApp</button>
