--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@ button {
 </style>
 </head>
 
-<body>
+<body><br><br>
+
+<a href="https://instagram.com/afaciwoo" target="_blank">
+<button>Instagram</button>
+</a>
+
+<br><br>
+
+<a href="https://facebook.com/afaaciwoo" target="_blank">
+<button>Facebook</button>
+</a>
 
 <canvas id="matrix"></canvas>
 
