--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ button {
 
 <body><br><br>
 
-<a href="https://instagram.com/afaciwoo" target="_blank">
+<a href="https://www.instagram.com/afa_ciwoo target="_blank">
 <button>Instagram</button>
 </a>
 
 <br><br>
 
-<a href="https://facebook.com/afaaciwoo" target="_blank">
+<a href="https://facebook.com/afaaciwoo target="_blank">
 <button>Facebook</button>
 </a>
 
