--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@ button {
 
 <body><br><br>
 
-<a href="https://www.instagram.com/afa_ciwoo target="_blank">
+<a href="https://www.instagram.com/afa_ciwoo/?hl=en" target="_blank">
 <button>Instagram</button>
 </a>
-
 <br><br>
 
 <a href="https://facebook.com/afaaciwoo target="_blank">
