--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@ button {
 </a>
 <br><br>
 
-<a href="https://facebook.com/afaaciwoo target="_blank">
-<button>Facebook</button>
+<a href="https://www.facebook.com/afa.fingerstyle.3" target="_blank">
+<button>FB ACCESS</button>
 </a>
-
 <canvas id="matrix"></canvas>
 
 <h1>Afa Cinwo</h1>
