--- a/index.html
+++ b/index.html
@@ -40,18 +40,22 @@ button {
 }
 </style>
 </head>
+<body>
 
-<body><br><br>
+<canvas id="matrix"></canvas>
+
+<br><br>
 
 <a href="https://www.instagram.com/afa_ciwoo/?hl=en" target="_blank">
 <button>Instagram</button>
 </a>
+
 <br><br>
 
-<a href="https://www.facebook.com/afa.fingerstyle.3" target="_blank">
-<button>FB ACCESS</button>
+<a href="https://m.facebook.com/afa.fingerstyle.3" target="_blank">
+<button>Facebook</button>
 </a>
-<canvas id="matrix"></canvas>
+
 
 <h1>Afa Cinwo</h1>
 
