--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@ button {
 
 <br><br>
 
-<a href="https://m.facebook.com/afa.fingerstyle.3" target="_blank">
+<a href="intent://profile/afa.fingerstyle.3#Intent;scheme=https;package=com.facebook.katana;end">
 <button>Facebook</button>
 </a>
-
 
 <h1>Afa Cinwo</h1>
 
