--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@ button {
 </a>
 
 <h1>Afa Cinwo</h1>
+    
+<p>Saya terima jasa bikin website simple / bio link</p>
+<p>Harga mulai 50K</p>  
+<p>Cepat • Murah • Bisa dari HP</p>
 
-<p id="typing"></p>
+<br>
 
-<a href="https://wa.me/6285891786542" target="_blank">
-<button>CONTACT ROOT</button>
+<a href="https://wa.me/6285891786542" target="_self">
+<button>Order Sekarang</button>
 </a>
+<p id="typing"></p>
 
 <script>
 // typing
