--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ button {
 <h1>Afa Cinwo</h1>
     
 <p>Saya terima jasa bikin website simple / bio link</p>
-<p>Harga mulai 50K</p>  
+<p>Harga mulai 50K</p>
+    <p>Masih belajar, harga bisa nego</p>
 <p>Cepat • Murah • Bisa dari HP</p>
 
 <br>
