--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ button {
 <p>Saya terima jasa bikin website simple / bio link</p>
 <p>Harga mulai 50K</p>
     <p>Masih belajar, harga bisa nego</p>
+    <p>Respon cepat via WhatsApp</p>
 <p>Cepat • Murah • Bisa dari HP</p>
 
 <br>
