--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ button {
 
 <br><br>
 
-<a href="intent://profile/afa.fingerstyle.3#Intent;scheme=https;package=com.facebook.katana;end">
+<a href="https://www.facebook.com/afa.fingerstyle.3" target="_blank">
 <button>Facebook</button>
 </a>
-
+    
 <h1>Afa Cinwo</h1>
     
 <p>Saya terima jasa bikin website simple / bio link</p>
