--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@ body {
 }
 
 canvas {
-    position:fixed;
-    top:0;
-    left:0;
-    z-index:-1;
+ position:fixed;
+ top:0;
+ left:0;
+ pointer-events:none;
+ z-index:-1;
 }
+    button {
+ position:relative;
+ z-index:10;
+    }
+    
 
 h1 {
     font-size:40px;
