--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@ margin-top:80px;
 <div class="card">
 
 <h1>Afa Cinwo</h1>
-
-<p>Jasa bikin website simple / bio link</p>
-<p>Harga mulai 50K • Bisa nego</p>
-<p>Order via WhatsApp</p>
+<p>🔥 Jasa Website Simple / Bio Link</p>
+<p>✅ Cocok buat jualan / personal branding</p>
+<p>💰 Mulai 50K (jadi cepat)</p>
+<p>📱 Bisa order langsung dari HP</p>
+<p>⚡ Respon cepat via WhatsApp</p>
 
 <a href="https://wa.me/6285891786542?text=Halo%20saya%20mau%20order%20website" target="_blank">
 <button>ORDER SEKARANG</button>
