--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@ margin-top:80px;
 <p>📱 Bisa order langsung dari HP</p>
 <p>⚡ Respon cepat via WhatsApp</p>
 
-<a href="https://wa.me/6285891786542?text=Halo%20saya%20mau%20order%20website" target="_blank">
-<button>ORDER SEKARANG</button>
-</a>
-
+<a href="https://wa.me/6285891786542?text=Halo%20Afa,%20saya%20mau%20order%20website.%20Boleh%20lihat%20contohnya?"
 <br><br>
 
 <a href="https://www.instagram.com/afa_ciwoo/" target="_blank">
