--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ margin-top:80px;
 <p>✅ Cocok buat jualan / personal branding</p>
 <p>💰 Mulai 50K (jadi cepat)</p>
 <p>📱 Bisa order langsung dari HP</p>
+  <p>🛠 Gratis revisi 1x</p>
+<p>📦 File dikirim setelah jadi</p>
 <p>⚡ Respon cepat via WhatsApp</p>
 
 <a href="https://wa.me/6285891786542?text=Halo%20Afa,%20saya%20mau%20order%20website.%20Boleh%20lihat%20contohnya?"
