--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ margin-top:80px;
 <p>📦 File dikirim setelah jadi</p>
 <p>⚡ Respon cepat via WhatsApp</p>
 
-<a href="https://wa.me/6285891786542?text=Halo%20Afa,%20saya%20mau%20order%20website.%20Boleh%20lihat%20contohnya?"
+<a href="https://wa.me/6285891786542?text=Halo%20Afa,%20saya%20mau%20order%20website.%20Boleh%20lihat%20contohnya?" target="_blank">
+<button>ORDER VIA WHATSAPP</button>
+</a>
+
 <br><br>
 
 <a href="https://www.instagram.com/afa_ciwoo/" target="_blank">
